# audiophile

./: .env  .env.example  .gitignore  Cargo.toml
src/: config.rs  lib.rs  main.rs  prelude.rs  server_queries.rs
src/commands/: join.rs  play.rs
src/functions/: mod.rs  play_latest_song.rs
src/handlers/: track_end.rs
src/server/: context.rs  mod.rs
src/song/: mod.rs
src/structs/: embed.rs  mod.rs  queue.rs  song.rs
src/utils/: mod.rs
youtube/: Cargo.toml
youtube/src/: lib.rs  prelude.rs
youtube/src/interfaces/: video.rs
youtube/src/structs/: api.rs  mod.rs  video.rs
youtube/src/utils/: regex.rs
