[package]
name = "audiophile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube = { path = "youtube" }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
serenity = { version = "*", features = [
    "framework",
    "standard_framework",
    "rustls_backend",
] }
dotenv = "0.15.0"
