[package]
name = "audiophile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube = { path = "youtube" }
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
serenity = { version = "0.11.7", features = [
    "framework",
    "standard_framework",
    "rustls_backend",
    "voice",
] }
dotenv = "0.15.0"
songbird = { version = "0.3.2", features = ["yt-dlp"] }
